# sahaf

./: .gitignore  CHANGELOG.md  README.md  install.bat  llms-full.txt  llms.txt  pyproject.toml  start.bat
.github/workflows/: ci.yml
backend/: api.py  classifier.py  config.py  converter.py  epub_converter.py  main.py  models.py  splitter.py  utils.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  lang.js  ui.js
tests/: conftest.py  test_classifier.py  test_models.py  test_splitter.py  test_utils.py
